--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -342,7 +342,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>blog</artifactId>
-            <version>3.1.0</version>
+            <version>3.1.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
