--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -205,19 +205,19 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-management-api</artifactId>
-            <version>2.0.9</version>
+            <version>2.0.10-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer-service</artifactId>
-            <version>2.0.9</version>
+            <version>2.0.10-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-thumbnails</artifactId>
-            <version>2.0.9</version>
+            <version>2.0.10-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
