--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.2.6-SNAPSHOT</version>
+            <version>7.2.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -114,7 +114,7 @@
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.1.3-SNAPSHOT</version>
+           <version>1.1.3</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
@@ -131,7 +131,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>1.0.5-SNAPSHOT</version>
+            <version>1.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -150,7 +150,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>security-filter</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -175,7 +175,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.1.6-SNAPSHOT</version>
+            <version>1.1.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -187,13 +187,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rolesmanager</artifactId>
-            <version>7.1.7-SNAPSHOT</version>
+            <version>7.1.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.2.4-SNAPSHOT</version>
+            <version>7.2.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>8.0.6-SNAPSHOT</version>
+            <version>8.0.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -224,7 +224,7 @@
             <!-- New Vanity URL dashboard -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-seo</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.2</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
@@ -261,7 +261,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.6-SNAPSHOT</version>
+            <version>2.1.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
