--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -619,12 +619,6 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/main/assembly/src.xml</descriptor>
-                    </descriptors>
-                </configuration>
-        
                 <executions>
                     <execution>
                         <id>make-assembly</id>
@@ -632,6 +626,21 @@
                         <goals>
                             <goal>single</goal>
                         </goals>
+                            <configuration>
+                                <descriptors>
+                                    <descriptor>src/main/assembly/src.xml</descriptor>
+                                </descriptors>
+                            </configuration>
+                    </execution>
+                    <execution>
+                        <id>package-ddl</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptor>src/main/assembly/src-db-scripts.xml</descriptor>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
