--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -150,7 +150,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rating</artifactId>
-            <version>2.0.5-SNAPSHOT</version>
+            <version>2.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -189,7 +189,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.1.5-SNAPSHOT</version>
+            <version>3.1.5</version>
             <scope>runtime</scope>
         </dependency>
 
