--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.7.1-jahia2-SNAPSHOT</version>
+            <version>4.7.1-jahia2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -175,7 +175,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.1.7-SNAPSHOT</version>
+            <version>1.1.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.2.5-SNAPSHOT</version>
+            <version>7.2.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -211,7 +211,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.2.7-SNAPSHOT</version>
+            <version>7.2.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -261,7 +261,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.7-SNAPSHOT</version>
+            <version>2.1.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
