--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -102,13 +102,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.1.5</version>
+            <version>3.1.7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.1.5</version>
+            <version>3.1.7-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.1.5</version>
+            <version>3.1.7-SNAPSHOT</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
