--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -101,6 +101,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>dx-commons-webpack</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
             <version>3.2.1-SNAPSHOT</version>
             <scope>runtime</scope>
