--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -77,6 +77,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>content-media-manager</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>contentRetrieval</artifactId>
             <version>7.1.1</version>
             <scope>runtime</scope>
