--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -166,6 +166,12 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>security-filter-tools</artifactId>
+            <version>1.0.3-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
