--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -294,6 +294,12 @@
             <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>sdl-generator-tools</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
