--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -174,7 +174,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap3-components</artifactId>
-            <version>3.5.2</version>
+            <version>3.5.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
