--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -175,7 +175,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.1.8-SNAPSHOT</version>
+            <version>1.1.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
