--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.7.1-jahia3-SNAPSHOT</version>
+            <version>4.7.1-jahia3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -126,7 +126,7 @@
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.1.4-SNAPSHOT</version>
+           <version>1.1.4</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
@@ -137,7 +137,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>facets</artifactId>
-             <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -211,7 +211,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.2.6-SNAPSHOT</version>
+            <version>7.2.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -223,7 +223,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>8.0.7-SNAPSHOT</version>
+            <version>8.0.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -242,7 +242,7 @@
             <!-- New Vanity URL dashboard -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-seo</artifactId>
-            <version>1.0.3-SNAPSHOT</version>
+            <version>1.0.3</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
@@ -279,7 +279,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.8-SNAPSHOT</version>
+            <version>2.1.8</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
