--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.7.1-jahia3-SNAPSHOT</version>
+            <version>4.7.1-jahia3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -102,36 +102,36 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.1.8-SNAPSHOT</version>
+            <version>3.1.8</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.1.8-SNAPSHOT</version>
+            <version>3.1.8</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.1.4-SNAPSHOT</version>
+           <version>1.1.4</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.1.8-SNAPSHOT</version>
+            <version>3.1.8</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>facets</artifactId>
-            <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>1.0.7-SNAPSHOT</version>
+            <version>1.0.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.2.6-SNAPSHOT</version>
+            <version>7.2.6</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>8.0.7-SNAPSHOT</version>
+            <version>8.0.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -224,7 +224,7 @@
             <!-- New Vanity URL dashboard -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-seo</artifactId>
-            <version>1.0.3-SNAPSHOT</version>
+            <version>1.0.3</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
@@ -261,7 +261,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.8-SNAPSHOT</version>
+            <version>2.1.8</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
