--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -143,7 +143,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
