--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-root</artifactId>
-    <version>7.3.1.1-backlog_10155-SNAPSHOT</version>
+    <version>7.3.1.1-SNAPSHOT</version>
     <name>Jahia Package Project Root</name>
     <groupId>org.jahia.server</groupId>
     <packaging>pom</packaging>
