--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -49,7 +49,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-pack-root</artifactId>
-        <version>7.3.1.1-backlog_7485-SNAPSHOT</version>
+        <version>7.3.1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
