--- a/package/shared-libraries/pom.xml
+++ b/package/shared-libraries/pom.xml
@@ -44,16 +44,17 @@
         please contact the sales department at sales@jahia.com.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <groupId>org.jahia.server</groupId>
-    <artifactId>jahia-package</artifactId>
-    <version>7.4.0.0-SNAPSHOT</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>shared-libraries</artifactId>
-  <name>Jahia Shared Libraries Package</name>
-  <packaging>pom</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>org.jahia.server</groupId>
+        <artifactId>jahia-package</artifactId>
+        <version>7.4.0.0-backlog_10186-SNAPSHOT</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>shared-libraries</artifactId>
+    <name>Jahia Shared Libraries Package</name>
+    <packaging>pom</packaging>
 
   <dependencies>
       <!-- Pluto 2.0 -->
