--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -279,7 +279,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.8</version>
+            <version>2.1.9-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
