--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -279,7 +279,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.2.0-SNAPSHOT</version>
+            <version>2.2.0-backlog_10186-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
