--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -162,13 +162,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>security-filter</artifactId>
-            <version>1.0.3</version>
+            <version>1.0.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>security-filter-tools</artifactId>
-            <version>1.0.3</version>
+            <version>1.0.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
